# azure-langgraph-quickstart

./: .env.example  .flake8  .gitignore  Dockerfile  Instructions.md  README.md  agent_config.yaml  la_agent.yaml  pyproject.toml  requirements.txt  setup.py
scripts/: example.sh  test_config.py
src/: __init__.py  app.py  config.py  create_la_agent.py  graph.py
src/llm/: __init__.py  azure.py  base.py  factory.py  gemini.py  ibm.py
src/utils/: guardrails.py  tracing.py
telemetry-backend/: .env.example  README.md  docker-compose.yml  otel-collector-config.yaml  prometheus.yml
